# mbarrier

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: arch-specific.yml  build.yml  ci.yml  cross-platform.yml
benches/: benchmark.rs
docs/: API.md
examples/: asm_analysis.rs  performance.rs  performance_nostd.rs  usage.rs
scripts/: test-cross-compile.sh  test-qemu.sh
src/: lib.rs
src/arch/: aarch64.rs  arm.rs  generic.rs  mod.rs  riscv.rs  riscv32.rs  riscv64.rs  x86.rs  x86_64.rs
